[project]
name = "codexswitcher"
version = "1.0.0"
description = "Instantly switch between multiple Codex accounts — save, swap, and manage auth profiles."
readme = "README.md"

requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Mohana" }]
keywords = ["codex", "openai", "auth", "switch", "accounts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.15.0,<1",
    "rich>=13.0.0,<14",
]

[project.scripts]
codexswitcher = "codexswitcher.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codexswitcher"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
